--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 .jumbotron {
 background-color: transparent;
-height: 400px;
+height: 150px;
 
 
 
@@ -34,8 +34,8 @@ h2{
 #trivia-box {
     width: 700px;
     height: 480px;
-    margin-left: 43px;
-    margin-top: -561px;
+    margin-left: 81px;
+    margin-top: -46px;
     background-color: black;
     opacity: 0.7;
     position: absolute;
@@ -63,23 +63,24 @@ input[type="radio"]{
 height: 300px;
 width: 300px;
 border-style: solid;
-border-color: black;
-margin-left: 900px;
+margin-top: 35px;
+margin-left: 310;
+display: none;
+
   }
 
   h3 {
       color: red;
       font-weight: bold;
   }
-  #start-screen {
-      height: 300px;
-      width:500px;
-      background-color: green;
-      margin-left: 339px;
-  }
+  
 
 
   .btn:not(:disabled):not(.disabled) {
-      margin-left: -45px;
-      margin-top: 0px;
+      margin-left: -61px;
+      margin-top: -3px;
   }
+  #start-btn {
+      margin-left: 413px;
+  }
+  
