test went well on the transition from the countdown hitting zero and the end screen showing up.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,7 @@ input[type="radio"]{
       margin-top: -44px;
       margin-left: 309px;
       color: red;
+      display: none;
   }
 
   #end-screen{
